--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/references.bib
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/references.bib
@@ -62,4 +62,231 @@ url="http://hdl.handle.net/10622/QK8VRF"
   publisher={Rijksuniversiteit Leiden}
 }
 
+@article{lizzeri2004did,
+  title={Why did the elites extend the suffrage? Democracy and the scope of government, with an application to Britain's “Age of Reform”},
+  author={Lizzeri, Alessandro and Persico, Nicola},
+  journal={The Quarterly Journal of Economics},
+  volume={119},
+  number={2},
+  pages={707--765},
+  year={2004},
+  publisher={MIT Press}
+}
+
+@article{corvalan2020political,
+  title={The political class and redistributive policies},
+  author={Corvalan, Alejandro and Querub{\'\i}n, Pablo and Vicente, Sergio},
+  journal={Journal of the European Economic Association},
+  volume={18},
+  number={1},
+  pages={1--48},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
+@article{meltzer1981rational,
+  title={A rational theory of the size of government},
+  author={Meltzer, Allan H and Richard, Scott F},
+  journal={Journal of political Economy},
+  volume={89},
+  number={5},
+  pages={914--927},
+  year={1981},
+  publisher={The University of Chicago Press}
+}
+
+@article{duggan2017political,
+  title={The political economy of dynamic elections: Accountability, commitment, and responsiveness},
+  author={Duggan, John and Martinelli, C{\'e}sar},
+  journal={Journal of Economic Literature},
+  volume={55},
+  number={3},
+  pages={916--84},
+  year={2017}
+}
+
+@article{besley2005political,
+  title={Political selection},
+  author={Besley, Timothy},
+  journal={Journal of Economic Perspectives},
+  volume={19},
+  number={3},
+  pages={43--60},
+  year={2005}
+}
+
+@article{besley2011educated,
+  title={Do educated leaders matter?},
+  author={Besley, Timothy and Montalvo, Jose G and Reynal-Querol, Marta},
+  journal={The Economic Journal},
+  volume={121},
+  number={554},
+  pages={F205--227},
+  year={2011},
+  publisher={Oxford University Press Oxford, UK}
+}
+
+@article{dal2009political,
+  title={Political dynasties},
+  author={Dal B{\'o}, Ernesto and Dal B{\'o}, Pedro and Snyder, Jason},
+  journal={The Review of Economic Studies},
+  volume={76},
+  number={1},
+  pages={115--142},
+  year={2009},
+  publisher={Wiley-Blackwell}
+}
+
+@article{chattopadhyay2004women,
+  title={Women as policy makers: Evidence from a randomized policy experiment in India},
+  author={Chattopadhyay, Raghabendra and Duflo, Esther},
+  journal={Econometrica},
+  volume={72},
+  number={5},
+  pages={1409--1443},
+  year={2004},
+  publisher={Wiley Online Library}
+}
+
+@article{hayo2014political,
+  title={Political leaders' socioeconomic background and fiscal performance in Germany},
+  author={Hayo, Bernd and Neumeier, Florian},
+  journal={European Journal of Political Economy},
+  volume={34},
+  pages={184--205},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{aidt2009tax,
+  title={Tax structure, size of government, and the extension of the voting franchise in Western Europe, 1860--1938},
+  author={Aidt, Toke S and Jensen, Peter S},
+  journal={International Tax and Public Finance},
+  volume={16},
+  number={3},
+  pages={362--394},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{bernini2018race,
+  title={Race, representation and local governments in the US South: The effect of the Voting Rights Act},
+  author={Bernini, Andrea and Facchini, Giovanni and Testa, Cecilia},
+  year={2018},
+  publisher={CEPR Discussion Paper No. DP12774}
+}
+
+@article{besley1997economic,
+  title={An economic model of representative democracy},
+  author={Besley, Timothy and Coate, Stephen},
+  journal={The Quarterly Journal of Economics},
+  volume={112},
+  number={1},
+  pages={85--114},
+  year={1997},
+  publisher={MIT Press}
+}
+
+@book{van1983toegang,
+  title={De toegang tot het Binnenhof: de maatschappelijke herkomst van de Tweede-Kamerleden tussen 1849 en 1970},
+  author={van den Berg, Johannes T},
+  year={1983},
+  publisher={Van Holkema \& Warendorf}
+}
+
+@article{tahoun2019personal,
+  title={The personal wealth interests of politicians and government intervention in the economy},
+  author={Tahoun, Ahmed and Van Lent, Laurence},
+  journal={Review of Finance},
+  volume={23},
+  number={1},
+  pages={37--74},
+  year={2019},
+  publisher={Oxford University Press}
+}
+
+@article{bottomley2019returns,
+  title={The returns to invention during the British industrial revolution},
+  author={Bottomley, Sean},
+  journal={The Economic History Review},
+  volume={72},
+  number={2},
+  pages={510--530},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{djankov2010disclosure,
+  title={Disclosure by politicians},
+  author={Djankov, Simeon and La Porta, Rafael and Lopez-de-Silanes, Florencio and Shleifer, Andrei},
+  journal={American Economic Journal: Applied Economics},
+  volume={2},
+  number={2},
+  pages={179--209},
+  year={2010}
+}
+
+@article{piketty2003income,
+  title={Income inequality in France, 1901--1998},
+  author={Piketty, Thomas},
+  journal={Journal of political economy},
+  volume={111},
+  number={5},
+  pages={1004--1042},
+  year={2003},
+  publisher={The University of Chicago Press}
+}
+
+@article{piketty2014inequality,
+  title={Inequality in the long run},
+  author={Piketty, Thomas and Saez, Emmanuel},
+  journal={Science},
+  volume={344},
+  number={6186},
+  pages={838--843},
+  year={2014},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{acemoglu2011consequences,
+  title={The consequences of radical reform: The French Revolution},
+  author={Acemoglu, Daron and Cantoni, Davide and Johnson, Simon and Robinson, James A},
+  journal={American economic review},
+  volume={101},
+  number={7},
+  pages={3286--3307},
+  year={2011}
+}
+
+@inproceedings{oosterlinck2020positive,
+  title={A Positive Effect of Political Dynasties: The Case of France's 1940 Enabling Act},
+  author={Oosterlinck, Kim and Lacroix, Jean and Meon, Pierre-Guillaume},
+  booktitle={Journal of Economic History},
+  volume={80},
+  number={2},
+  pages={609--609},
+  year={2020},
+}
+
+@article{aidt2019motivates,
+  title={What motivates an oligarchic elite to democratize? evidence from the roll call vote on the great reform act of 1832},
+  author={Aidt, Toke S and Franck, Rapha{\"e}l},
+  journal={The Journal of Economic History},
+  volume={79},
+  number={3},
+  pages={773--825},
+  year={2019},
+  publisher={Cambridge University Press}
+}
+
+@article{aidt2014workers,
+  title={Workers of the world, unite! Franchise extensions and the threat of revolution in Europe, 1820--1938},
+  author={Aidt, Toke S and Jensen, Peter S},
+  journal={European Economic Review},
+  volume={72},
+  pages={52--75},
+  year={2014},
+  publisher={Elsevier}
+}
+
 
