--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/main.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/main.tex
@@ -20,7 +20,7 @@ Historically, democratic nation states in Western Europe emerged in the long nin
 
 After 1848, following the revolutions in France and Germany, such a change also took place in the Netherlands. The King at the time, Willem II, ceded power to parliament and ordered the principal liberal politician of the time, J.R. Thorbecke, to draft a revised Constitution, thereby enshrining the regime of parliamentary democracy. At the outset, however, the system was still oligarchic: most politicians were either landed aristocrats, or theologians and professors, belonging to the country's intellectual and cultural elite. 
 
-Under the pressure of prominent liberals, and perhaps more importantly, the increasing presence of socialism, the Netherlands embarked on a trajectory of abolishing most electoral restrictions in place, leading to an increase in the enfranchised population in various steps, and culminating in universal suffrage, approved by parliament in 1919. These gradual increases in the enfranchised population were accompanied by various trends: first, the country saw a large increase in religious tensions and religious segregation. Second, politicians from different social backgrounds and milieus were elected in the lower house. The country thus transitioned from a society ruled by traditional elites to a society where the representative bodies were much more like the general population in terms of social background. Third, the country's politicians laid the groundwork for the welfare state by adopting laws that boosted public education, instigating redistribution and increasing government spending. 
+Under the pressure of prominent liberals, and perhaps more importantly, the increasing presence of socialism, the Netherlands embarked on a trajectory of abolishing most electoral restrictions in place, leading to an increase in the enfranchised population in various steps, and culminating in universal suffrage, approved by parliament in 1919. These gradual increases in the enfranchised population were accompanied by various trends: first, the country saw a large increase in religious tensions and religious segregation. Second, politicians from different social backgrounds and milieus were elected in the lower house. The country thus transitioned from a society ruled by traditional elites to a society where the representative bodies were much more like the general population in terms of social background. \autocite{van1983toegang} Third, the country's politicians laid the groundwork for the welfare state by adopting laws that boosted public education, instigating redistribution and increasing government spending. 
 
 The first trend is \textit{pillarization}, which is specific to the Dutch setting: the increase in religious tensions and segregation in the country. The 1848 Constitutional revision brought to power a liberal government, which set about to emancipate the country's Catholic and Jewish citizens, starting symbolically with the reestablishment of the episcopal hierarchy in the Netherlands. This decision was met with considerable opposition, spearheaded by some of the most prominent Orthodox Protestant intellectuals, who responded by offering a petition with more than 50,000 signatures to the King. The King in turn refused to reject the petition, which he had been dictated by the government to do, following which the government resigned. \autocite{oud1961honderd} Liberals subsequently accused the King of alleged partiality to Protestantism, violating the separation of church and state dictated by the novel constitution. A subsequent law reaffirming the separation of church and state mitigated tensions, but for the remainder of the century, politicians from both Protestant and Catholic confessions set out to arrange as many aspects of life as possible within their pillar, leaving comparatively little space for central government intervention. \autocite{van2013eerste}
 
@@ -28,33 +28,25 @@ Secondly, following increased democratization, electoral politics became competi
 
 Thirdly, the country saw a modest increase in public expenditures and redistribution following protests and increasing popularity of socialist politicians. Compared to other Western countries, social expenditures in the Netherlands were at a similar level, but rather low in absolute terms, and failed to reach a breakthrough until well after the Second World War. [REF] Oftentimes, proposals to give the state an increasing role in the economy were met with fierce opposition, especially from Catholic politicians, who opted for a privatized form of care organized on the basis of the country's religious 'pillars', although at various points in time, near unanimity was reached to amend particularly pressing issues, such as child labor, public housing, and education. \autocite{van2013eerste}
 
-When comparing the Netherlands to other Western European countries,  the first trend seems to have been very much in line with various other Western European countries. Most Western European countries seem to have enacted constitutional reforms, if not in the early 19th century, then after the Paris Commune and 1848 Riots. The majority of countries then embarked on a similar trajectory culminating in universal suffrage shortly after World War I, with only very few countries granting universal suffrage at once \autocite{caramani2017elections}. The trajectory with respect to gender discrimination was also similar. A French court decided against suffrage of women in 1885 \autocite{przeworski2009conquered}, whereas in the Netherlands, attempts by feminist activist Aletta Jacobs to secure female suffrage were sabotaged in 1887 by a constitutional amendment.\footnote{This 1887 amendment did however, imply a substantial extension of suffrage to men.} Countries that instigated universal male suffrage around the same time as the Netherlands (1917) include Luxembourg, the United Kingdom, Sweden, and many others. \autocite{caramani2017elections}
+When comparing the Netherlands to other Western European countries,  the pattern of suffrage extensions seems to have been very much in line with various other Western European countries. Most Western European countries seem to have enacted constitutional reforms, if not in the early 19th century, then after the Paris Commune and 1848 Riots. The majority of countries then embarked on a similar trajectory culminating in universal suffrage shortly after World War I, with only very few countries granting universal suffrage at once \autocite{caramani2017elections}. The trajectory with respect to gender discrimination was also similar. A French court decided against suffrage of women in 1885 \autocite{przeworski2009conquered}, whereas in the Netherlands, attempts by feminist activist Aletta Jacobs to secure female suffrage were sabotaged in 1887 by a constitutional amendment.\footnote{This 1887 amendment did however, imply a substantial extension of suffrage to men.} Countries that instigated universal male suffrage around the same time as the Netherlands (1917) include Luxembourg, the United Kingdom, Sweden, and many others. \autocite{caramani2017elections}
 
-When comparing the Netherlands with other countries in terms of public expenditures and redistribution, roughly the same view arises: the Netherlands seem to lag behind their neighbouring countries systematically, only catching up after World War II \autocite{lindert2004growing}. In particular, social transfers as a percentage of GDP remained low relative to other countries, stagnating at about 2.5\% of GDP before 1930, at a level comparable to France and Italy at a time. Other parts of public expenditures were similarly small, with the notable exception of expenditures on education, which the government agreed to finance in 1917. School enrollment was on a level comparable to Belgium, France and Norway. Poor relief as government expenditure was also a very marginal part of GDP, at least up until 1880. \autocite{van2000eenheiddstaat, lindert2004growing}
+When comparing the Netherlands to other countries in terms of public expenditures and redistribution, roughly the same view arises: the Netherlands seem to slightly lag behind some of their neighbouring countries, only catching up after World War II \autocite{lindert2004growing}. In particular, social transfers as a percentage of GDP remained low relative to other countries, stagnating at about 2.5\% of GDP before 1930, at a level comparable to France and Italy at a time. Other parts of public expenditures were similarly small, with the notable exception of expenditures on education, which the government agreed to finance in 1917. School enrollment was on a level comparable to Belgium, France and Norway. Poor relief as government expenditure was also a very marginal part of GDP, at least up until 1880. \autocite{van2000eenheiddstaat, lindert2004growing}
 
-In sum, the Netherlands seems to undergo trends in parallel to various other (Western) European countries. Government expenditures steadily increased over time, but remain modest by today's standards before the outbreak of World War I. Furthermore, the country moved towards universal suffrage, which it achieved in 1919\footnote{The law instigating universal suffrage was approved in 1919, and the first parliamentary election in which every citizen aged 25 or older could vote took place in 1922.}. The aspect that stands out, however, is pillarization. With the exception of Germany, the virtually all Western European countries were far more religiously homogeneous than the Netherlands. However, German Protestants were for the larger part Lutherans, a less orthodox variety of Protestantism, [Can I say this?] whereas Dutch Protestants were generally Calvinists. Be that as it may, religious tensions in Germany were not nearly as aggravated as in the Netherlands, and the country's governance was not organized around religious affiliation. This paper attempts to investigate the role of politicians in these processes, by investigating wealth of parliaments and politicians as a function of political affiliation, and time. 
+In sum, the Netherlands seem to undergo trends in parallel to various other (Western) European countries. Government expenditures steadily increased over time, but remain modest by today's standards before the outbreak of World War I. Furthermore, the country moved towards universal suffrage, which it achieved in 1919\footnote{The law instigating universal suffrage was approved in 1919, and the first parliamentary election in which every citizen aged 25 or older could vote took place in 1922.}. The aspect that stands out, however, is pillarization. With the exception of Germany, the virtually all Western European countries were far more religiously homogeneous than the Netherlands. However, German Protestants were for the larger part Lutherans, whereas Dutch Protestants were by and large exclusively Calvinists, and religious tensions in Germany were not nearly as aggravated as in the Netherlands, and the country's governance was not organized around religious affiliation. This paper attempts to investigate the role of politicians in the processes of pillarization, changing representation, and the enactment of a welfare state by investigating wealth of parliaments and politicians over time, and as a function of political affiliation.
 
-Many people allege that politicians, like any agent in a principal-agent system, are inclined to pursue their own interests instead of the interests of their constituents. 
-An important motive for finding out how wealthy politicians are is provided by the literature on political selection. Many empirical and theoretical studies have argued that following a relaxation in eligibility and suffrage restrictions, historically employed by many countries, the political arena should have become more diverse in terms of origin, wealth, gender, and many other aspects. Several theoretical models, e.g. Melzer and [blabla], Querubin et al, and Besley [blalba] show that government policy is responsive to changes in the electoral system. Part of the reason could be that politicians of different demographics are elected following a suffrage extension (Pande [blablal]). 
+Many researchers allege that politicians are inclined to pursue their own interests instead of the interests of their constituents. \autocite{lizzeri2004did, duggan2017political, corvalan2020political} Politicians more similar to the general population might be more inclined to pursue policies that favor redistribution, intervention, and progressive taxation. Finding out whether, and to what extent, politicians are similar to the population provides us with evidence as to whether this mechanism is at play or not: the personal wealth of politicians can influence the trajectories of public spending, and democratization. Furthermore, another important motive for finding out how wealthy politicians are is provided by the literature on political selection. Many empirical and theoretical studies have argued that following a relaxation in eligibility and suffrage restrictions historically employed by many countries, the political arena should  become more diverse in terms of social origin, gender, and many other aspects.\autocite{besley1997economic, besley2005political, bernini2018race} In addition, several theoretical models, as well as empirical studies, e.g.  show that government policy is responsive to changes in the characteristics of politicians. \autocite{meltzer1981rational, besley2011educated, chattopadhyay2004women, hayo2014political} Hence, the continuity, or change, in the composition of politicians can influence political decision-making. 
 
-Political dominance of liberals, then confessionals
+Whereas the present-day literature has investigated various factors, as of yet, the role of personal wealth of politicians has never been elucidated. For starters, it is unknown whether and to what extent the wealth of the political elite resembles the general population. Secondly, it is unknown what the consequences are of a wealth gap between politicians and their constituents. In this paper, we first show the evolution of wealth in parliament over time. We use carefully compiled list of all members per parliament, including politicians who took the place of politicians who resigned, died, or left their position because of other reasons. We identify the wealthiest and poorest members of parliament. Furthermore, we contrast the lower house to the upper house. It is well known that the upper house remained much more exclusive than the lower house, the entry of which was (in theory) open to any male candidate. \autocite{van1983toegang} We also distinguish between lower house members, provincial executives and ministers. In other words, this paper makes a step in the direction of finding out what the role of politicians is by asking how large the gap is between politicians and the electorate in terms of wealth and several other characteristics, and how this various over time when various suffrage extensions are enacted (an aspect which the Netherlands shares with many other countries) and with respect to political affiliation (an aspect in which the Netherlands is rather unique). 
 
-Representative of rest of the population?
+In the context of pillarization, we also compare and contrast the wealth of politicians of different parties, shedding light on two questions: firstly, do there exist substantial differences in wealth between politicians of different religious affiliation or political ideology? Secondly, how does this difference evolve over time? The latter question sheds light on mechanisms at play in political selection: politicians join political parties, and are endorsed by newspapers, which sharply influence political competition over time. Facing a changing electoral environment, political parties are likely to take different decisions regarding the politicians they choose to support. One likely way in which this change could manifest itself is by allowing candidates of different wealth levels and different social origins to be candidates, given an electorate that might be more inclined to opt for these candidates. 
 
-The present-day literature focuses on institutions and incentives, but much less on the social origins and wealth of politicians. This paper makes a step in the direction of finding out what the role of politicians is by asking how large the gap is between politicians and the electorate they are supposed to represent in terms of wealth and several other characteristics, and how this various over time when various suffrage extensions are enacted (an aspect which the Netherlands shares with many other countries) and with respect to political affiliation (an aspect in which the Netherlands is rather unique). 
+We find that, throughout the entire period of investigation, there is a substantial gap between the wealth of politicians and the wealth of the general population in all representative bodies. The gap is largest in the upper house, consistent with both the exclusive nature of the upper house and legal restrictions to eligibility, but it was also substantial for executives, and perhaps more surprisingly, for the lower house members. Even though the lower house was in theory accessible to any male candidate since 1848, in practice, elected politicians were on average much wealthier than the general population, \footnote{The results also hold for the median politician: the estimate of the average is highly sensitive to outliers.} and the gap between politicians and the general population only began to narrow in the early 20th century, after significant suffrage extensions had been effectuated. Nevertheless, the gap still remained very large, with the median politician to be in the [XX]-quantile of the wealth distribution, according to our estimates. On the other hand, there were a substantial number of lower house politicians who died with practically no estate, similar to the median Dutch citizen at the time. 
 
-
-although in political debates, British, French and German examples were frequently cited, and many laws were modeled on blueprints of their foreign counterparts, 
-
-
-In this paper, we proceed to do two things: first, we show the evolution of wealth in parliament over time. We use carefully compiled list of all members per parliament, including politicians who took the place of politicians who resigned, died, or left their position because of other reasons. We identify the wealthiest and poorest members of parliament. Furthermore, we contrast the lower house to the upper house. It is well known that the upper house remained much more exclusive than the lower house, the entry of which was (in theory) open to any male candidate. We also distinguish between lower house members, provincial executives and ministers. 
-
-In the context of pillarization, we also compare and contrast the wealth of politicians of different parties, shedding light on two questions: firstly, do there exist substantial differences in wealth between politicians of different political ideologies? Secondly, how does this difference evolve over time? The latter question sheds light on mechanisms at play in political selection: politicians join political parties, and are endorsed by newspapers, which sharply influence political competition over time. Facing a changing electoral environment, political parties are likely to take different decisions regarding the politicians they choose to support. One likely way in which this change could manifest itself is by allowing candidates of different wealth levels and different social origins to be candidates, given an electorate that might be more inclined to opt for these candidates. 
 
 \section{Definition of the Political Elite}
-The political elite is often used as a synonym of a country's rulers, however, it is subjective in its nature. In this paper, we take the political elite of a country to consist of following individuals: First, all lower house members, that is to say, representatives elected directly by the enfranchised population. Compared to the restrictions on eligiblity for the upper house, there were almost no restrictions on being a member of the lower house: one had to be male, and be 30 years or older, which was decreased to 25 years or older following the introduction of male suffrage in 1917. The exclusion of female candidates was subsequently ended in 1918. 
+The political elite is often used as a synonym for a country's rulers, however, it is subjective in its nature. In this paper, we take the political elite to consist of following individuals: First, all lower house members, that is to say, representatives elected directly by the enfranchised population. Compared to the restrictions on eligiblity for the upper house, there were almost no restrictions on being a member of the lower house: one had to be male, and be 30 years or older, which was decreased to 25 years or older following the introduction of male suffrage in 1917. The exclusion of female candidates was subsequently ended in 1918. 
 
-Second, all upper house members, senators whose formal task is to verify the judicial coherence of all laws approved by the lower house, but whose role in practice is frequently political. Upper house members are elected indirectly, according to a system which is based on provincial elections: the enfranchised population elect provincial deputies, \textit{Gedeputeerden}, who in turns elect representatives as upper house members. The legal restrictions on being a candidate for Upper house membership were very strong throughout the entire period under investigation: one had to be male, and be on the \textit{Lijst van hoogst aangeslagenen in 's Rijks directe belastingen}, a list comprising individuals in each province who contributed the most to the country's tax revenue. The criteria to be on these lists varied sharply per province, but was usually modified such as to include about 1 individual for every 3000 inhabitants of the province in 1848. Later, as a result of the changes in the Electoral law in 1887, the requirements were laxened, and the lists were extended to incorporate 1 individual for every 1500 inhabitants, effectively increasing the candidate pool to be elected to the upper house. In 1917, all such restrictions were abolished, leaving only gender restrictions in place, which were in turn abolished two years later. In table \ref{tab:upperhouselowerhouse}, We summarize the changes in restrictions on eligibility and suffrage until the introduction of universal suffrage in 1919. 
+Second, all upper house members, senators whose formal task is to verify the judicial coherence of all laws approved by the lower house, but whose role in practice is frequently political. Upper house members are elected indirectly, according to a system which is based on provincial elections: the enfranchised population elect provincial deputies, \textit{Gedeputeerden}, who in turns elect representatives as upper house members. The legal restrictions on being a candidate for Upper house membership were very strong throughout the entire period under investigation: one had to be male, and be on the \textit{Lijst van hoogst aangeslagenen in 's Rijks directe belastingen}, a list comprising individuals in each province who contributed the most to the country's tax revenue. The criteria to be on these lists varied sharply per province, but was usually modified such as to include about one individual for every 3000 inhabitants of the province in 1848. Later, as a result of the changes in the Electoral law in 1887, the requirements were laxened, and the lists were extended to incorporate one individual for every 1500 inhabitants, effectively increasing the candidate pool to be elected to the upper house. In 1917, all such restrictions were abolished, leaving only gender restrictions in place, which were in turn abolished two years later. In table \ref{tab:upperhouselowerhouse}, We summarize the changes in restrictions on eligibility and suffrage until the introduction of universal suffrage in 1919. 
 
 \begin{table}[!ht]
     \footnotesize
@@ -86,13 +78,13 @@ We use hand-collected probate inventories, \textit{Memories van Successie} from 
 
 These probate inventories contain some metadata (including the place of death and time of death, with the help of which the inventories were found), and then (usually) contain a complete list of an individuals assets and liabilities. Two special cases deserve attention: first, some politicians died with 0 or negative net wealth. In a subset of these cases, this is written using words, and an exhaustive list of all assets and liabilities is missing. In other cases, however, the list is there, and net wealth is present as usual. Second, some politicians are claimants to inheritances that are yet to be divided among heirs. In this case, oftentimes all assets yet to be divided are listed, as are all (eventual) liabilities. After a calculation of the net value of the inheritance, the corresponding share of the inheritance accruing to the subject of the probate inventory is added. In some cases, however, the value of the assets and liabilities is directly discounted to the share accruing to the subject of the probate inventory. Finally, sometimes, a claim to an inheritance is sometimes listed describing no underlying assets and merely the value of the claim. Since there were no explicit accounting guidelines, this is often left to the discretion of the tax agent assembling the probate inventory. This is important because it leads to consequences when classifying assets. 
 
-We categorize all assets in the probate inventories according to 10 categories: real estate, Dutch and foreign government bonds, Dutch and foreign private bonds \footnote{be it to firms or individuals}, Dutch and foreign stocks, cash and other liquid assets, and miscellaneous assets. 
+We categorize all assets in the probate inventories according to 10 categories: real estate, Dutch and foreign government bonds, Dutch and foreign private bonds, Dutch and foreign stocks, cash and other liquid assets, and miscellaneous assets.\footnote{Private bonds can be owed by  both firms and individuals.}
 
 In some cases, it is also possible to retrieve who were creditors of the probate inventory's subject. These cases, however, were few, and creditors were mostly private individuals, leaving little benefit to categorization. The aforementioned way of incorporating claims on inheritances in probate inventories leads to the fact that some inheritance claims have been categorized according to asset group, whereas some other inheritances had to be classified as bonds (because they represent claims on other assets). 
 
 Taxation of the probate inventories took place in various ways, depending on asset class: first, the value of stocks and bonds that were traded on the Amsterdam stock exchange (be it domestic or foreign) was directly taken from the \textit{Prijscourant}, an official publication detailing the price of all securities on a daily basis. Next, taxation of all other assets is arbitrary. In case of private bonds (credit to other individuals), taxation generally amounts to taking the nominal value of a bond. It does not take into account the (present) value of interest payments, and neither does it take into account the risk to future cash flows. In case of equities that are not listed, such as a share in a private firm, or real estate, the source of taxation is opaque.\footnote{As of present day, the Dutch tax administration still values real estate in an arbitrary way which differs from municipality to municipality (the administrative unit for real estate taxation). The model used by municipalities is not publicly known.} It is supposed that this taxation roughly reflects the actual value of the underlying assets. 
 
-Access of the probate inventories is limited due to two reasons. First, practically, only probate inventories up until 1927 are publicly available in the archives. Second, legally, Dutch privacy law stipulates a 75-year period before any government-administered documents about individuals can be made public, which would render all inventories from 1950 onward on available. We obtained limited accessibility from the Dutch tax agency to secure as many probate inventories as possible, especially those pertaining to Lower and Upper House members in the period around World War I, when most far-reaching reforms were implemented. Because access was only limited (in terms of time), the share of found inventories is slightly lower than in other periods. In addition, these archives aren't yet as well-organized as the available archives, making it more difficult to find any probate inventory. 
+Access to the probate inventories is limited due to two reasons. First, practically, only probate inventories up until 1927 are publicly available in the archives. Second, Dutch privacy law stipulates a 75-year period before any government-administered documents about individuals can be made public, which would render all inventories from 1945 onward on available. We obtained limited accessibility from the Dutch tax agency to secure as many probate inventories as possible, especially those pertaining to Lower and Upper House members in the period around World War I, when most far-reaching reforms were implemented. Because access was only limited (in terms of time), the share of found inventories is slightly lower than in other periods. In addition, these archives aren't yet as well-organized as the available archives, making it more difficult to find any probate inventory. 
 
 \subsection{Biographical Data}
 Second, We obtain data regarding politicians' careers and social origin from the \href{www.pdc.nl}{\textit{Politiek Documentatie Centrum}}, a private think-tank focused on Dutch national politics. This dataset contains information about all ministers, lower house, upper house members, and the main provincial executives, the \textit{Commissarissen}. We append this dataset by including a hand-collected dataset about provincial assistant-executives, \textit{Gedeputeerden}. These data encompass information about politicians' places of birth and decease, and birth and decease dates, as well as all functions they occupied during their lifetimes (as far as they are known). 
@@ -102,7 +94,7 @@ These data allow me to determine when politicians were elected and when their ma
 \subsection{Inflation and Wages}
 The appraisal of an individual's assets is denominated in local currency (the Dutch guilder). To ensure intertemporal comparability, that is, comparability between politicians who died at various points in time, we deflate the numbers from the \textit{Memories van Successie} using the data on inflation by Reinhardt \& Rogoff.\footnote{Available \href{https://carmenreinhart.com/2020/02/netherlands/}{here}}
 
-To further facilitate the interpretability of the analysis, we convert wealth to subsistence baskets, using data from the official Dutch Statistics by \autocite{deZwart2015} on prices and wages to convert construction worker's wages into subsistence baskets. We make one additional modification to the existing data: the existing data consists of daily subsistence baskets, which we multiply by 365 to retrieve yearly subsistence baskets. In this way, politicians wealth is represented in terms of a construction worker's daily wage. In practice, the deflated guilder amount and the measure based on wages give highly similar and highly correlated results. 
+To further facilitate the interpretability of the analysis, we convert wealth to subsistence baskets, using data from the official Dutch Statistics by \autocite{deZwart2015} on prices and wages to convert construction worker's wages into subsistence baskets. We make one additional modification to the existing data: the existing data consists of daily subsistence baskets, which we multiply by 365 to retrieve yearly subsistence baskets. In this way, politicians' wealth is represented in terms of a construction worker's yearly wage. In practice, the deflated guilder amount and the measure based on wages give highly similar and highly correlated results. 
 
 \section{Wealth and Political Affiliation}
 It is often thought that political affiliation and personal wealth of politicians are related. For example, it is frequently thought that individuals from a working class or agricultural background might be more prone to become a socialist, because socialist ideology and politics might represent their interests better than other political parties and ideologies. 
@@ -114,9 +106,21 @@ Next, we proceed to investigate the average, and median wealth of parliament ove
 
 \section{Conclusion}
 
+This study investigated the wealth of the political elite in the Netherlands from 1870 to 1922, and argued that the political elite was extremely wealthy in comparison to the average citizen they represented. The wealth of politicians is analyzed over time, according to political affiliation, and according to specific representative body. We find that the gap between politicians and the population they represent does not appear to decrease over time, even in face of suffrage extensions and other measures promoting better democratic representation. It seems that only in the 1910's elected politicians appear to be significantly poorer than beforehand, but they are still wealthier than the average citizen by a large factor. 
+
+Pol Affil (\& pillarization)
+Representative Body
+
+The findings of this paper call for further research into the discrepancy between politicians and the electorate: it is unlikely that the findings of this paper can be generalized uncritically to other (Western) European countries. While the work by Piketty et al. on inequality in the modern era points to highly unequal societies in the late nineteenth and early twentieth centuries, it does not automatically follow that politicians always find themselves in the upper quantiles of the wealth distribution. \autocite{piketty2003income, piketty2014inequality} It is plausible that there are large cross-country, and cross-regional variations, even among Western European countries, because of two reasons: first, each nascent democracy bears the marks of its own (unique) past, and second, institutional variation and cultural and religious heritage might have influenced the degree to which political elites are representative. \autocite{acemoglu2011consequences} \footnote{Despite the Netherlands sharing a quite similar pattern of democratic transition with several other Western European countries, there are also countries in which democratic transition happened in a much more turbulent manner, e.g. France. }
+
+Furthermore, the findings also stress the need for research that investigates the likely consequences of this discrepancy. More specifically, the influence of politicians' personal interest on their decision-making must be investigated, not only in a specific setting or country, but also much more generally. Contemporary research shows that politicians' wealth influences their decision-making, and the same could be true historically, which is all the more plausible given weaker constraints on governance, and an institutional context in which (nascent) democracies are less responsive. \autocite{tahoun2019personal}. Similarly, the  degree to which politicians' own interest dictate their decision-making might itself be dependent on a host of other factors: consistent with politicians being constrained by electorates and other mechanisms, the degree to which politicians can act according to their own interests might vary from country to country. \autocite{djankov2010disclosure}
+
+More broadly, the findings call for further research into the extent and quality of representation and its effects as a function of various factors, of which wealth is but one aspect. It is also highly likely that the effect of the quality of representation on legislation or economic development is heterogeneous. It might, for example, vary strongly, depending on political institutions, democratic responsiveness, electoral competition, and dissemination of information by a functioning press. Research in Europe has recently taken into account characteristics such as political dynasties, the threat of revolution, and electoral opportunism. \autocite{aidt2014workers, oosterlinck2020positive, aidt2019motivates} Accordingly, this study suggests that the literature can be more attentive to explicit personal interests of politicians, such as wealth. 
+
+Coming back to the subject of wealth, it seems that it is possible to retrieve probate inventories of high-profile individuals in the UK, and in France, the \textit{Archives départementales} shelter similar appraisals of assets and liabilities as do the Dutch \textit{Memories van Successie}. \autocite{bottomley2019returns} \footnote{\href{https://archives.cd08.fr/arkotheque/client/ad_ardennes/_depot_arko/articles/1834/tables-des-successions-et-absences-_doc.pdf}{Here} is a document detailing how to find the French equivalents to the Memories van Successie.} Assuming that other countries have archival sources similar to the aforementioned ones, and given the trend toward digitization that allows researchers to efficiently access international archives, finding relevant information about wealth, estate value, and the financial position of politicians in the late modern era may give us a nuanced and detailed view of the role of politicians in the political and economic development of Europe in the 19th and early 20th centuries. 
 
 %\bibliographystyle{apalike}
 %\bibliography{references}
+\clearpage
 \printbibliography
-
 \end{document}
